# SeaDronesSee_MOT

./: .gitignore  README.md  pyproject.toml
scripts/: README.md  cleanup.sh  convert_json_to_parquet.sh  setup.sh
src/convert_to_parquet/: JSON_README.md  PARTITIONING_README.md  processing_script.py
src/duckdb/schemas/: annotations.sql  categories.sql  images.sql  tracks.sql  videos.sql
src/seadronessee_mot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
